// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=badge 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors motion-safe:transition-shadow motion-safe:hover:shadow-[0_0_0_3px_var(--color-copilot-pulse)]"
  data-copilot-chip-tone="purple"
  data-copilot-chip-variant="badge"
  style="background-color: var(--color-copilot-badge-bg, rgba(234, 88, 12, 0.10)); border-color: var(--color-copilot-bg-medium, rgba(234, 88, 12, 0.14)); color: var(--color-copilot-badge, #C2410C);"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=citation 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors motion-safe:transition-shadow motion-safe:hover:shadow-[0_0_0_3px_var(--color-copilot-pulse)]"
  data-copilot-chip-tone="purple"
  data-copilot-chip-variant="citation"
  style="background-color: var(--color-copilot-badge-bg, rgba(234, 88, 12, 0.10)); border-color: var(--color-copilot-bg-medium, rgba(234, 88, 12, 0.14)); color: var(--color-copilot-badge, #C2410C);"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=confidence 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors border-border bg-muted text-muted-foreground"
  data-copilot-chip-tone="default"
  data-copilot-chip-variant="confidence"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=engine 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors motion-safe:transition-shadow motion-safe:hover:shadow-[0_0_0_3px_var(--color-copilot-pulse)]"
  data-copilot-chip-tone="purple"
  data-copilot-chip-variant="engine"
  style="background-color: var(--color-copilot-badge-bg, rgba(234, 88, 12, 0.10)); border-color: var(--color-copilot-bg-medium, rgba(234, 88, 12, 0.14)); color: var(--color-copilot-badge, #C2410C);"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=match 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors border-border bg-muted text-muted-foreground"
  data-copilot-chip-tone="default"
  data-copilot-chip-variant="match"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=risk 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors border-border bg-muted text-muted-foreground"
  data-copilot-chip-tone="default"
  data-copilot-chip-variant="risk"
>
  label
</span>
`;

exports[`CopilotChip matches the variant snapshot for every supported variant: variant=suggested 1`] = `
<span
  class="inline-flex items-center gap-xxs rounded-pill border font-semibold px-xs py-[1px] text-xs transition-colors motion-safe:transition-shadow motion-safe:hover:shadow-[0_0_0_3px_var(--color-copilot-pulse)]"
  data-copilot-chip-tone="purple"
  data-copilot-chip-variant="suggested"
  style="background-color: var(--color-copilot-badge-bg, rgba(234, 88, 12, 0.10)); border-color: var(--color-copilot-bg-medium, rgba(234, 88, 12, 0.14)); color: var(--color-copilot-badge, #C2410C);"
>
  label
</span>
`;
